--- a/BigSchool/Content/Site.css
+++ b/BigSchool/Content/Site.css
@@ -23,8 +23,35 @@ textarea {
     max-width: 280px;
 }
 
-.navbar-inverse .navbar-toggle:hover,
-.navbar-inverse .navbar-toggle:focus {
-    background-color: #777;
-    border-color: #fff
+
+.navbar-inverse {
+    background-color: crimson;
+    border-color: whitesmoke;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: cornsilk;
+}
+    .navbar-inverse .navbar-brand {
+        color: cornsilk;
+    }
+
+/*Course layout*/
+.course {
+    list-style: none;
+}
+.course > li {
+    position: relative;
+    margin-bottom: 30px;
+}
+.course > li .date {
+        text-align: center;
+        background-color: #194056;
+        color:rgb(174, 159, 136);
+        width: 60px;
+        border-radius: 8px;
+}
+.course > li .details {
+    position: absolute;
+    top: 0;
+    left: 70px;
 }
